# game-engine

./: CMakeLists.txt  vcpkg.json
assets/shaders/: basic.fs.glsl  basic.vs.glsl
res/shaders/: basic-fragment.glsl  basic-vertex.glsl
src/: main.cpp
src/data_types/: vec2.hpp  vec3.hpp  vec4.hpp
src/game_engine/: timer.cpp  timer.hpp
src/graphics/: buffer_layout.cpp  buffer_layout.hpp  camera.cpp  camera.hpp  debugbreak.h  drawable.cpp  drawable.hpp  graphics_base.cpp  graphics_base.hpp  index_buffer.cpp  index_buffer.hpp  shader.cpp  shader.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  window.cpp  window.hpp
